# jrelcal

./: .classpath  .gitignore  .project  AUTHORS  ChangeLog  ChangeLog.jrelcal_ext  JRelCal.pc.in  Makefile.am  TODO  build.xml  configure.ac  configure.in  java_make_rules  package
doc/: Doxyfile  Graph.tex  GraphViz.tex  Makefile.am  RASS.bib  RASS.tex  Set.tex  latex-make-rules  mybibAG.bib  mybibHZ.bib  mymacros.tex  proof.sty  rass.hs
jars/: Makefile.am
src/: Makefile.am  overview.html
src/jrelcal/: AdjacencyTable.java  Indexable.java  IndexedSet.java  IndexedSetTest.java  MainTests.java  Makefile.am  MultiAdjacencyTable.java  MultiRelation.java  MultiRelationTest.java  OrderedBag.java  OrderedBagTest.java  OrderedSet.java  OrderedSetTest.java  Pair.java  RSFFormatException.java  RSFReader.java  Relation.java  RelationTest.java  TestAll.java  Tuple.java  VertexBag.java  VertexSet.java
src/jrelcal/bags/: Bag.java  BagTest.java  MultiAdjacencyTable.java  MultiRelation.java  MultiRelationTest.java  OrderedBag.java  OrderedBagTest.java  VertexBag.java
src/jrelcal/bom/: BillsOfMaterials.java  BillsOfMaterialsTest.java  Body.java  Build.java  Configuration.java  Interface.java  PMSCaseStudy.java  Subsystem.java  VersionedObject.java
src/jrelcal/ci/: ContinuousIntegration.java
src/jrelcal/pms/: Body.java  Build.java  Configuration.java  Interface.java  PMSCaseStudy.java  Subsystem.java  VersionedObject.java
src/jrelcal/rsf/: RSFFormatException.java  RSFReader.java
src/jrelcal/sets/: AbstractRelation.java  AdjacencyTable.java  AdjacencyTableRelation.java  AdjacencyTableRelationTest.java  Indexable.java  IndexedSet.java  IndexedSetTest.java  OrderedSet.java  OrderedSetTest.java  PairSetRelation.java  PairSetRelationTest.java  Relation.java  RelationTest.java  Set.java  SetTest.java  VertexSet.java
utils/: Makefile.am
